# thessen-virtual-lab

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: architect.md  bioinformaticist.md  clinical-informaticist.md  critic.md  curator.md  public-health-researcher.md  tick-ecologist.md
.claude/skills/team-meeting/: SKILL.md
agents/: team.py
discussions/: 2025-03-06_one_health_initiative_meeting.md
examples/: example_meeting.py
src/virtual_lab/: __init__.py  agent.py  constants.py  prompts.py  run_meeting.py  utils.py
