[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thessen-virtual-lab"
version = "0.1.0"
description = "A virtual lab of LLM agents for multi-domain research in tick-borne diseases, vector ecology, and public health"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Anne Thessen" },
]
keywords = [
    "llm",
    "agents",
    "research",
    "tick-borne-disease",
    "public-health",
    "virtual-lab",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/athessen/thessen-virtual-lab"
Repository = "https://github.com/athessen/thessen-virtual-lab"

[tool.hatch.build.targets.wheel]
packages = ["src/virtual_lab"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
